2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Don't try to handle ItemContainerStyle change
	  events in Selector as ComboBox and ListBox have different
	  semantics for some reason and it's impossible to do it
	  simply. Unregresses the ComboBox test.

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: When the DisplayMemberPath or ItemTemplate
	  properties change we should update all generated containers.
	  Note: We explicitly do not update ComboBox.SelectedItem as
	  Silverlight has a bug and doesn't update it.

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: When ItemsControl.ItemTemplate changes we
	  need to update all the generated containers in the Listbox
	  (but not combobox!).

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* RichTextBox.cs: Add missing null checks on SSC code

2010-06-29  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: ItemContainerStyle is only propagated to
	  generated containers, not to ComboBoxItems the user adds
	  directly.

2010-06-29  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: We base the popups position based on the size
	  of the plugin itself, not the root element. We also need to
	  reset HorizontalOffset/VerticalOffset to display the popup
	  at the bottom should the dimensions change such that it now
	  fits there. Fixes part of the new cs2.

2010-06-29  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: If the ItemsPresenter changes on an
	  ItemsControl we should clear the children on the old
	  presenter before using the new one. Fixes part of cs2.

2010-06-23  Alan McGovern  <amcgovern@novell.com>

	* ItemsPresenter.cs: ItemsPresenter may be in the
	  ControlTemplate for an item which is *not* an ItemsControl.
	  In this case we just do nothing instead of throwing an
	  InvalidCastException.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Rewrite TemplateBindings to not be