@@ -429,9 +429,7 @@ namespace MoonTest.System.Windows.Controls {
 				Assert.VisualChildren (presenter, "#3"); // No visual children
 
 				presenter.Measure (Size.Empty);
-				Assert.VisualChildren (presenter, "#4", // Fails in Silverlight 3
-					new VisualNode<Rectangle> ("#b")
-				);
+				Assert.VisualChildren (presenter, "#4");
 				Assert.IsNull (presenter.DataContext, "#5");
 			});
 		}
